--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <center>
         <h1>Contato</h1>
         <p>
-          Entre em contato comigo pelo WhattsApp preenchendo o formulario abaixo
+          Entre em contato comigo pelo WhattsApp preenchendo o formulario abaixo.
         </p>
       </center>
       <center>
